# rust-psbt-v2

./: Cargo.toml
examples/: multisig-segwit-v0.rs  separate-creator-constructor.rs
src/: error.rs  input.rs  lib.rs  macros.rs  output.rs  serde_utils.rs
src/roles/: constructor.rs  creator.rs  extractor.rs  finalizer.rs  mod.rs  signer.rs  updater.rs
